# molassembler

./: .algorithm.h.swp  .clang-format  .clang-tidy  .commit-notes  .conan_include.cmake  .gitignore  .gitlab-ci.yml  .gitmodules  .lvimrc  .whitelizard.txt  Ackermann.h  AddToContainer.h  AdjacencyList.hpp  AngleLookup.h  Array.h  Assignment.cpp  Assignment.h  Assignment.hxx  AssignmentColumn.h  AssignmentColumn.hxx  BTree.h  Boost.h  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  Cache.h  CompileTimeOptions.h  ConnectivityManager.hpp  ConstexprAngles.h  ConstexprProperties.cpp  ConstexprProperties.h  ContainerTraits.h  Containers.h  CyclicPolygons.cpp  CyclicPolygons.h  DistanceGeometry.hpp  Doxyfile  DynamicArray.h  (+80 more)
.conan_test_package/: CMakeLists.txt  conanfile.py  test.cpp
analysis/: AnalysisHelpers.h  BenchmarkGraphAlgorithms.cpp  BenchmarkRefinement.cpp  BenchmarkRefinementFunctions.cpp  CMakeLists.txt  ChiralityConstraints.cpp  DGRefinementProblem.cpp  DirectedConformerGeneration.cpp  Gor1Explainer.cpp  Interpret.cpp  MakeIsomorphism.cpp  RankingExplainer.cpp  RaytraceRefinement.cpp  ShapeRecognition.cpp  Stereopermutation.cpp  Stereopermutations.cpp  SymmetryRecognition.cpp  TraceRefinement.cpp  plot-recognition-data.py
analysis/Shapes/: csm.cpp  shape.cpp  thomson.cpp  writeMappings.cpp  writeTransitionDotFiles.cpp
analysis/asin/: Makefile
analysis/chirality-constraints/: NOTES.rst  analyze-single.R  main.cpp
analysis/embedding_benchmarks/: bootstrapped.R
analysis/graph_benchmarks/: bootstrapped.R  withheaders.R
analysis/matrix-visualization/: render-matrix.R
analysis/raytrace/: Makefile  NOTES.rst  a_geo_tetra1.inc  analytical_g.inc  plot_progress.R  progress_plot_all.sh
analysis/sym-testing/: NOTES.rst  analysis.R  pymol_fit_all_to_first.py
analysis/trace/: plot_progress.R
chemical_symmetries/test/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  Makefile  Tricks.rst  api.dox  dev-details.dox  developers.dox  dg-gradient.dox  feasibility.dox  footer.html  known-issues.dox  layout.xml  library.bib  macrofile.tex  manual.dox  stylesheet.css
doc/examples/: construction.cpp
doc/graphs/: information_flow.dot
doc/source/: algorithms.rst  concepts.rst  conf.py  working_with_molecules.rst
python/: AtomStereopermutatorPython.cpp  BondStereopermutatorPython.cpp  CMakeLists.txt  CompositePython.cpp  ConformersPython.cpp  CyclesPython.cpp  DescriptorsPython.cpp  DetailPython.cpp  DirectedConformerGeneratorPython.cpp  EditingPython.cpp  GraphAlgorithmsPython.cpp  GraphPython.cpp  IOPython.cpp  InterpretPython.cpp  ModelingPython.cpp  MoleculePython.cpp  OptionsPython.cpp  PrngPython.cpp  PythonModule.cpp  RankingInformationPython.cpp  SerializationPython.cpp  ShapeSubmodulePython.cpp  StereopermutatorListPython.cpp  SubgraphsPython.cpp  TypeCasters.h  TypesPython.cpp  VersionPython.cpp  __init__.py  pkginit.py  setup.py.in  test_Cycles.py  test_Dihedral.py  test_DirectedConformerGenerator.py  test_IO.py  test_Serialization.py
python/sphinx/: changelog.rst  conf.py.in  conformers.rst  cycles.rst  directed_conformer_generator.rst  editing.rst  graph.rst  index.rst  interpret.rst  io.rst  issues.rst  model.rst  molassembler.rst  molecule.rst  options.rst  ranking_information.rst  serialization.rst  shapes.rst  stereopermutators.rst
src/: CMakeLists.txt  config.cmake.in
src/Molassembler/: AngstromPositions.cpp  AngstromPositions.h  AtomStereopermutator.cpp  AtomStereopermutator.h  BondOrders.cpp  BondOrders.h  BondStereopermutator.cpp  BondStereopermutator.h  Conformers.cpp  Conformers.h  Cycles.cpp  Cycles.h  Descriptors.cpp  Descriptors.h  DirectedConformerGenerator.cpp  DirectedConformerGenerator.h  Editing.cpp  Editing.h  Graph.cpp  Graph.h  GraphAlgorithms.cpp  GraphAlgorithms.h  GraphIterators.cpp  IO.cpp  IO.h  Interpret.cpp  Interpret.h  Isomers.cpp  Isomers.h  IteratorRange.h  Log.cpp  Log.h  Molecule.cpp  Molecule.h  Options.cpp  Options.h  PeriodicBoundaries.cpp  PeriodicBoundaries.h  Prng.cpp  Prng.h  (+12 more)
src/boost-outcome/: CMakeLists.txt  boost-outcomeConfig.cmake.in  config.cmake.in
src/chemical_symmetries/: CMakeLists.txt  NOTES.md  README.md
src/cmake/: AddEigen.cmake  ColorMessages.cmake  CompilerSpecificSetup.cmake  DelibImport.cmake  Dependencies.cmake  FindMKL.cmake  FindPythonModule.cmake  ImportPybind11.cmake  ImportUtilsOS.cmake  ScineUtils.cmake  TargetLinkEigen.cmake  Utils.cmake  molassemblerConfig.cmake
src/cyclic_polygons/: CMakeLists.txt  CyclicPolygons.h  README.md  config.cmake.in  cyclic_polygonsConfig.cmake.in  tests.cpp
src/gor1/: CMakeLists.txt  config.cmake.in  gor1Config.cmake.in  test.cpp
src/molassembler/: AngstromPositions.cpp  AngstromPositions.h  AtomStereopermutator.cpp  AtomStereopermutator.h  BondOrders.cpp  BondOrders.h  BondStereopermutator.cpp  BondStereopermutator.h  CMakeLists.txt  Conformers.cpp  Conformers.h  Cycles.cpp  Cycles.h  Descriptors.cpp  Descriptors.h  DirectedConformerGenerator.cpp  DirectedConformerGenerator.h  Editing.cpp  Editing.h  Graph.cpp  Graph.h  GraphAlgorithms.cpp  GraphAlgorithms.h  GraphIterators.cpp  IO.cpp  IO.h  ISSUE.md  Interpret.cpp  Interpret.h  Isomers.cpp  Isomers.h  IteratorRange.h  Log.cpp  Log.h  Molecule.cpp  Molecule.h  NOTES.md  Options.cpp  Options.h  Prng.cpp  (+15 more)
src/shapes/: CMakeLists.txt  NOTES.md  README.md
src/stereopermutation/: CMakeLists.txt  README.md
src/temple/: CMakeLists.txt  NOTES.md  README.md
stereopermutation/lib/: CMakeLists.txt
stereopermutation/test/: CMakeLists.txt
temple/test/: CMakeLists.txt  constexprTests.cpp  tests.cpp
test/: AtomStereopermutator.cpp  BondStereopermutator.cpp  CMakeLists.txt  Coherence.cpp  Cycles.cpp  Descriptors.cpp  Editing.cpp  Fixtures.cpp  Fixtures.h  GraphAlgorithms.cpp  Molecule.cpp  OrderDiscoveryHelper.cpp  PrivateGraph.cpp  RankingInformation.cpp  RankingSpotCheck.cpp  Serialization.cpp  ShortestPathsGraphTests.h  Smiles.cpp  Subgraphs.cpp  Vsepr.cpp  tests.cpp
validation/: CMakeLists.txt  GraphAlgorithms.cpp  RankingValidation.cpp  StrainedMolecules.cpp
(+2052 files in other folders)
